Bug 477841 - Magnifier effect does not work when an icc color profile is used
Summary: Magnifier effect does not work when an icc color profile is used
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, wayland-only
Depends on:
Blocks:
 
Reported: 2023-12-01 15:16 UTC by Patrick Silva
Modified: 2023-12-05 18:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-12-01 15:16:59 UTC
STEPS TO REPRODUCE
1.  enable Magnifier effect in Desktop Effects KCM
2. press meta+(+)
3. 

OBSERVED RESULT
black square near the mouse pointer

EXPECTED RESULT
Magnifier effect  works

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-12-01 18:47:10 UTC
Works for me with an Intel iGPU (10th gen). This seems like it could be a GPU driver issue. What GPU are you using? Are you in a VM?
Comment 2 Patrick Silva 2023-12-01 19:00:04 UTC
My Plasma is installed on a physical machine with intel iGPU.

Processors: 4 × Intel® Core™ i5-4670K CPU @ 3.40GHz
Graphics Processor: Mesa Intel® HD Graphics 4600
Comment 3 Patrick Silva 2023-12-02 10:27:09 UTC
Found the culprit: icc color profile.

STEPS TO REPRODUCE
1. apply an icc color profile in Display Configuration KCM
2.  enable Magnifier effect in Desktop Effects KCM
3. press meta+(+)
Comment 4 Bug Janitor Service 2023-12-05 11:19:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4744
Comment 5 Zamundaaa 2023-12-05 18:05:54 UTC
Git commit ab48621758364b6ed245400821ef4368d3f78433 by Xaver Hugl.
Committed on 05/12/2023 at 18:56.
Pushed by zamundaaa into branch 'master'.

plugins/magnifier: use floating point offscreen texture

With color management, everything would get clamped to 1 nit otherwise.

M  +2    -2    src/plugins/magnifier/magnifier.cpp

https://invent.kde.org/plasma/kwin/-/commit/ab48621758364b6ed245400821ef4368d3f78433