fix(plugin): use floating point offscreen texture

With color management, everything would get clamped to 1 nit otherwise.

BUG: 477841